# cert-watch

./: .agent-reflection  .dockerignore  .events.jsonl  .fr-review.json  .gitignore  .mcp.json  .review-feedback  AGENTS.md  CHANGELOG.md  CONVENTIONS.md  Dockerfile  HANDOFF.md  INTERFACE_MANIFEST.py  README.md  UPGRADING.md  debug_upload.py  hraedon_root.cer  pyproject.toml  spec.md  spec.yaml
.factory/: security-findings.json  test-results.json
.factory/memory/: architectural_decision.jsonl
.factory/state/: bridge.yaml
.github/workflows/: ci.yml  dependency-update.yml  deploy-smoke.yml  e2e.yml  identifier-gate.yml  release.yml
breadcrumbs/active/: BC-020.md  BC-021.md  BC-028.md  BC-029.md  BC-030.md  BC-031.md  BC-032.md  BC-033.md  BC-034.md  BC-035.md  BC-037.md  BC-038.md  BC-039.md  BC-040.md  BC-041.md  BC-042.md  BC-043.md  BC-044.md  BC-045.md  BC-046.md  BC-048.md  BC-049.md  BC-061.md  BC-063.md  BC-070.md  BC-071.md  BC-072.md  BC-073.md  BC-074.md  BC-075.md  BC-081.md  BC-083.md  BC-084.md  BC-085.md  BC-086.md  BC-095.md  BC-100.md  BC-103.md  BC-106.md  BC-107.md  (+19 more)
breadcrumbs/resolved/: BC-020.md  BC-021.md  BC-028.md  BC-029.md  BC-030.md  BC-031.md  BC-032.md  BC-033.md  BC-034.md  BC-035.md  BC-036.md  BC-037.md  BC-038.md  BC-039.md  BC-040.md  BC-041.md  BC-042.md  BC-043.md  BC-044.md  BC-045.md  BC-046.md  BC-047.md  BC-048.md  BC-049.md  BC-050.md  BC-051.md  BC-052.md  BC-053.md  BC-054.md  BC-055.md  BC-056.md  BC-057.md  BC-058.md  BC-059.md  BC-060.md  BC-061.md  BC-062.md  BC-063.md  BC-064.md  BC-065.md  (+59 more)
deploy/argocd/: application-demo.yaml  application.yaml
deploy/compose/: docker-compose.yml
deploy/iis/: README.md  web.config  web.config.reverse-proxy
deploy/k8s/: cert-watch-agent-sa.yaml  deployment.yaml  https-redirect.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  prometheus-rules.yaml  pvc.yaml  secret-example.yaml  service.yaml
deploy/k8s-demo/: deployment.yaml  https-redirect.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pvc.yaml  secret.yaml  service.yaml
deploy/systemd/: cert-watch.service
deploy/vault/: README.md
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  OPERATIONS.md  README.md  positioning.md  runbook.md
docs/archive/: 2026-06-05-ldap-e2e-handoff.md
docs/design/: style-guide.md
docs/spec/: wi_cert_chain_library.md  wi_certificate_model.md  wi_database_layer.md  wi_fr01_dashboard.md  wi_fr02_tls_scan.md  (+10 more)
githooks/: pre-commit
k8s/: OPERATIONS.md  configmap.yaml  deployment.yaml  example-secrets.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
plans/: 001-cert-watch-roadmap.md  002-alert-retention-and-digest.md  003-alembic-migration-tooling.md  005-ops-centric-detail-page.md  006-security-posture-ct-fleet-lenses.md  007-rollout-readiness.md  008-audit-log.md  009-schema-migrations-backup.md  010-auth-hardening.md  011-runbook-and-ops-decisions.md  012-safe-defaults-smb.md  013-tagging-and-alert-groups.md  014-onboarding-secure-bootstrap.md  015-alert-groups.md  016-cert-history-drift-trends.md  017-differentiation-backlog.md  018-auth-data-consolidation.md  019-gui-settings-onboarding.md  020-security-middleware-consolidation.md  021-auth-module-decomposition.md  022-alert-channel-adapters.md  023-v0.5.0-release-scope.md  024-test-coverage-to-90.md  025-compliance-audit-report.md  026-audit-log-tamper-evidence.md  027-acme-renewal-window-alert.md  028-siem-log-export.md  029-security-review-hardening.md  030-adcs-discovery.md  031-durable-spooling.md  032-pluggable-secrets.md  033-action-hooks.md  034-agentic-e2e-auth-validation.md  035-role-based-authorization.md  036-fleet-e2e-and-credential-lifecycle.md  037-ldap-test-tofu-ca-provisioning.md  038-synthetic-ldaps-ci.md  039-api-key-auth.md  040-ct-log-monitoring.md  041-auto-discovery.md  (+13 more)
reflections/: 2026-05-25-glm-5-1.md  2026-05-26-opencode-v03.md  2026-05-27-glm-5-1-2.md  2026-05-27-kimi-k2-6-2.md  2026-05-27-kimi-k2-6.md  2026-05-27-kimi-k2p6-turbo.md  2026-05-27-qwen3-6.md  2026-05-29-glm-5-1-2.md  2026-05-29-glm-5-1.md  2026-05-29-kimi-k2-6.md  2026-05-29-mimo-v2.5-pro.md  2026-05-30-glm-5-1-3.md  2026-05-30-glm-5-1-4.md  2026-05-30-glm-5-1-5.md  2026-05-30-glm-5-1-6.md  2026-05-30-glm-5-1-7.md  2026-05-30-glm-5-1-8.md  2026-05-30-mimo-v2-5.md  2026-05-30-opencode-v04.md  2026-05-31-glm-5-1-9.md  2026-05-31-kimi-k2-6.md  2026-05-31-qwen3-6-27b.md  2026-06-01-glm-5-1-10.md  2026-06-01-glm-5-1-19.md  2026-06-01-glm-5-1-20.md  2026-06-01-kimi-k2-6.md  2026-06-01-mimo-v2-5-pro.md  2026-06-02-deepseek-v4-pro.md  2026-06-02-glm-5-1-2.md  2026-06-02-glm-5-1-3.md  2026-06-02-glm-5-1.md  2026-06-02-kimi-k2p6-turbo.md  2026-06-02-mimo-v2-5-pro-2.md  2026-06-02-mimo-v2-5-pro-3.md  2026-06-02-mimo-v2-5-pro-4.md  2026-06-02-mimo-v2-5-pro-5.md  2026-06-02-mimo-v2-5-pro.md  2026-06-03-glm-5-1-2.md  2026-06-03-glm-5-1-3.md  2026-06-03-glm-5-1.md  (+80 more)
scripts/: Verify-Install.ps1  check_committed_identifiers.py  install-git-hooks.sh  install-linux.sh  install-windows.ps1  uninstall-windows.ps1  update-visual-baselines.sh  vault-login.sh  verify_install.py
tests/: README.md  _helpers.py  _integration_servers.py  conftest.py  test_adversarial_review_fixes.py  test_alert_adapters.py  test_alert_group_match_preview.py  test_alert_groups.py  test_alert_retention.py  test_alerts.py  test_alerts_integration.py  test_allowlist_ssrf.py  test_api_keys.py  test_app.py  test_app_endpoints.py  test_async_route_offloading.py  test_audit.py  test_auth.py  test_bc083_081.py  test_bc100_private_ca.py  test_bc115_118.py  test_bc121_caa_per_scan.py  test_bc124.py  test_bc151_ct_misissuance.py  test_bc159_persistence.py  test_bulk_import.py  test_ca_probe.py  test_caa_check.py  test_calendar.py  test_cert_chain.py  test_cert_history.py  test_certificate_model.py  test_cli.py  test_compliance.py  test_config_humanize.py  test_config_range_validation.py  test_crypto_posture.py  test_csp_csrf_hardening.py  test_css_class_coverage.py  test_ct_lookup.py  (+95 more)
(+254 files in other folders)
