[project]
name = "cert-watch"
version = "0.3.0"
description = "Track expirations of TLS certificates from scanned hosts and uploaded files (PEM/DER/PKCS#12)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "hraedon" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]
e2e = [
    "playwright>=1.49",
    "pytest-playwright>=0.6",
]
auth-ldap = [
    "ldap3>=2.9",
]
auth-oauth = [
    "authlib>=1.3",
    "requests>=2.31",
]
auth = [
    "cert-watch[auth-ldap,auth-oauth]",
]
dns = [
    "dnspython>=2.6",
]

[project.scripts]
cert-watch = "cert_watch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cert_watch"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not e2e'"
# E2E tests opt-in via `pytest -m e2e` (requires Playwright + browsers).
markers = ["e2e: end-to-end tests requiring Playwright + a running app"]
