[project]
name = "cert-watch"
version = "0.5.0"
description = "All-in-one observability for the certificate lifecycle — live scanning, offline upload, signature-verified chain validation, TLS posture grading, CT reconciliation, and alerting — built for small and mid-sized businesses."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "hraedon" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "cryptography>=43.0",
    "prometheus-client>=0.21",
    "dnspython>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]
e2e = [
    "playwright>=1.49",
    "pytest-playwright>=0.6",
]
auth-ldap = [
    "ldap3>=2.9",
]
auth-oauth = [
    "authlib>=1.3",
    "requests>=2.31",
]
auth = [
    "cert-watch[auth-ldap,auth-oauth]",
]

[project.scripts]
cert-watch = "cert_watch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cert_watch"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not e2e and not integration' --cov=cert_watch --cov-report=term-missing --cov-fail-under=88"
# E2E tests opt-in via `pytest -m e2e` (requires Playwright + browsers).
# E2E workflows must pass --no-cov to override the coverage settings above.
markers = [
    "e2e: end-to-end tests requiring Playwright + a running app",
    "integration: integration tests requiring external tools (e.g. openssl)",
]

[tool.coverage.run]
source = ["cert_watch"]
omit = [
    "cert_watch/__main__",
    "cert_watch/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
