[project]
name = "cert-watch"
version = "0.9.3"
description = "All-in-one observability for the certificate lifecycle — live scanning, offline upload, signature-verified chain validation, TLS posture grading, revocation checking, and alerting — built for small and mid-sized businesses."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "hraedon" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    # python-multipart>=0.0.30 fixes CVE-2026-53539 (quadratic querystring DoS)
    "python-multipart>=0.0.30",
    # cryptography>=48.0.1 fixes GHSA-537c-gmf6-5ccf (vulnerable OpenSSL in wheels)
    "cryptography>=48.0.1",
    "prometheus-client>=0.21",
    "dnspython>=2.6",
    "sse-starlette>=2.0",
    # Direct security floor: starlette>=1.3.1 fixes CVE-2026-54283 (request.form()
    # limits silently ignored → DoS). Otherwise pulled transitively via fastapi.
    "starlette>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.8",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "djlint>=1.36",
    "freezegun>=1.5",
]
e2e = [
    "playwright>=1.49",
    "pytest-playwright>=0.6",
    "pytest-playwright-visual-snapshot>=0.5",
]
auth-ldap = [
    "ldap3>=2.9",
]
auth-oauth = [
    "authlib>=1.3",
    "requests>=2.32",
]
auth = [
    "cert-watch[auth-ldap,auth-oauth]",
]
windows = [
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
cert-watch = "cert_watch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cert_watch"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not e2e and not integration and not deploy' -n auto --dist loadscope --cov=cert_watch --cov-report=term-missing --cov-fail-under=88"
# Parallel by default (`-n auto`, pytest-xdist) — the unit suite is process- and
# tmp_path-isolated, so workers don't collide. For interactive debugging
# (`-s`, pdb, readable output) override with `-n0`. Set `COVERAGE_CORE=sysmon`
# (Python 3.12+) for the faster sys.monitoring coverage core — CI does this.
# E2E tests opt-in via `pytest -m e2e` (requires Playwright + browsers).
# E2E workflows must pass --no-cov to override the coverage settings above.
markers = [
    "e2e: end-to-end tests (Playwright + running app)",
    "visual: visual-regression screenshot tests (Playwright; -m visual)",
    "integration: integration tests requiring external tools",
    "deploy: platform-level deploy tests",
    "ldap_e2e: LDAP E2E tests (opt-in via CW_LDAP_E2E=1)",
]
# Visual-regression baselines (pytest-playwright-visual-snapshot).
playwright_visual_snapshots_path = "tests/e2e/__screenshots__"
playwright_visual_snapshot_threshold = "0.2"

[tool.coverage.run]
source = ["cert_watch"]
omit = [
    "cert_watch/__main__",
    "cert_watch/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "ldap3.*",
    "authlib.*",
    "win32evtlog.*",
    "win32evtlogutil.*",
]
ignore_missing_imports = true
